Fix site responsiveness on small screens and refactor foursquare api fetch

--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,40 @@
 .head {
   width: 100%;
   height: 10vh;
+  display: flex;
+  font-size: calc(20px + 0.5vw);
+  color: #EFF5F5;
+  background-color: #696C6CFF
 }
+
 .app-title {
   font-size: calc(20px + 0.5vw);
+  width: 85%;
+  margin: auto;
+}
+
+.app-menu {
+  width: 15%;
+  display: block;
+  margin: auto;
 }
 
 .sidebar {
-  width: 30%;
+  width: 1%;
+  background-color: #FFF;
+  height: 87vh;
+  transition: 0.1s;
+}
+
+.sidebar-expanded {
+  width: 40%;
   background-color: #696C6CFF;
-  height: 90vh;
+  height: 87vh;
+  transition: 0.3s;
+}
+
+.app-menu:hover {
+  cursor: pointer;
 }
 
 .attractions-select {
@@ -49,15 +74,18 @@
   margin: 20px 0;
 }
 
-.mapDiv {
-  width: 70%;
+.attractions-list li:hover {
+  cursor: pointer;
 }
 
 .infowindow {
-  width: 250px;
-  height: 140px;
+  width: 180px;
+  height: 100px;
   padding: 0;
-  /*margin: 0;*/
+}
+
+.marker:hover {
+  cursor: pointer;
 }
 .attraction-info {
   display: flex;
@@ -66,6 +94,7 @@
 .attraction-img {
   max-height: 110px;
   width: 40%;
+  height: 100%;
 }
 
 .attraction-tip {
@@ -74,5 +103,48 @@
   padding-left: 10px;
 }
 
+.footer {
+  width: 100%;
+  height: 3vh;
+  background-color: #D5D6DCFF;
+}
+
+.footer a{
+  text-decoration-line: none;
+  margin-top: 15px;
+  color: black;
+}
+
+.footer a p{
+  margin-top: 5px;
+}
+
+@media only screen and (min-width: 650px) {
+
+  .app {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .app-title {
+    width: 100%;
+  }
+
+  .app-menu {
+    display: none;
+  }
+
+  .sidebar {
+    width: 30%;
+    background-color: #696C6CFF;
+    display: block;
+  }
+
+  .infowindow {
+    width: 200px;
+    height: 100px;
+    padding: 0;
+  }
+}
 
 
